--- a/index.html
+++ b/index.html
@@ -3,40 +3,43 @@
 <head>
   <meta charset="utf-8">
   <title>Site01</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
 
-  <section id="banner">
-    banner
-  </section>
+<header>
+  <article class="container">
+    <section id="logo"></section>
+  <nav>
+    <ul id="menu">
+      <a href="#home"><li>Home</li></a>
+      <a href="#servicos"><li>Serviços</li></a>
+      <a href="#sobre"><li>Sobre</li></a>
+      <a href="#contato"><li>Contato</li></a>
+    </ul>
+  </nav>
+  </article>
+</header>
 
-  <section id="conteudo">
-    <article>
-      <h1 class="titulo">Conteudo 1</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.
-    </article>
+<section id="banner"></section>
 
-    <article>
-      <h1 class="titulo">Conteudo 2</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-      anim id est laborum.
-    </article>
-  </section>
+<section>
+  <article class="container space">
+    <h1>Conteudo 1</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+  </article>
 
+  <article class="container space">
+    <h1>Conteudo 2</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+  </article>
+</section>
 
-
-
-
-  <footer>Site 2020</footer>
+<footer>Site © 2020</footer>
 </body>
 </html>
