--- a/index.html
+++ b/index.html
@@ -10,84 +10,93 @@
 </head>
 <body>
 
-<header>
-  <article class="container">
-    <section id="logo"></section>
-  <nav class="menu">
-    <div id="mobile">
-      MENU
-    </div>
-    <script type="text/javascript">
-    $('#mobile').on('click', function(){
-      $('ul').toggle();
-    })
-    </script>
-    <ul>
-      <a href="#"><li>Home</li></a>
-      <a href="#servicos"><li>Serviços</li></a>
-      <a href="#"><li>Sobre</li></a>
-      <a href="#contato"><li>Contato</li></a>
-    </ul>
-  </nav>
-  </article>
-</header>
-
-<section id="banner"></section>
-
-<section>
-  <article class="container space">
-    <h1 class="titulo">Conteudo 1</h1>
-    <h2 class="subtitulo">Lorem ipsum dolor</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-  </article>
-
-  <article class="container space">
-    <h1 class="titulo">Conteudo 2</h1>
-    <h2 class="subtitulo">Lorem ipsum dolor</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-  </article>
-
-  <article class="container space">
-    <h1 class="titulo">Conteudo 3</h1>
-    <h2 class="subtitulo">Lorem ipsum dolor</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-  </article>
-</section>
-
-<section id="servicos">
-  <article class="container space">
-    <h1 class="titulo">Serviços</h1>
-    <h2 class="subtitulo">Confira o que fazemos</h2>
-
-    <article class="box">
-      <i class="fas fa-drafting-compass"></i>
-      <h1>Web Design</h1>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+  <header>
+    <article class="container">
+      <section id="logo"></section>
+      <nav class="menu">
+        <div id="mobile">
+          MENU
+        </div>
+        <script type="text/javascript">
+        $('#mobile').on('click', function(){
+          $('ul').toggle();
+        })
+        </script>
+        <ul>
+          <a href="#"><li>Home</li></a>
+          <a href="#servicos"><li>Serviços</li></a>
+          <a href="#"><li>Sobre</li></a>
+          <a href="#contato"><li>Contato</li></a>
+        </ul>
+      </nav>
+      <img src="imgs/logo.png" id="logo">
     </article>
+  </header>
 
-    <article class="box">
-      <i class="fas fa-atlas"></i>
-      <h1>Design Gráfico</h1>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+  <section id="banner"></section>
+
+  <section>
+    <article class="container space">
+      <h1 class="titulo">Conteudo 1</h1>
+      <h2 class="subtitulo">Lorem ipsum dolor</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
     </article>
-
-    <article class="box">
-      <i class="fas fa-gamepad"></i>
-      <h1>Game Dev</h1>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    </article>
-
-  </article>
   </section>
 
-  <section id="contato">
+  <section id="servicos">
+    <article class="container space">
+      <h1 class="titulo">Serviços</h1>
+      <h2 class="subtitulo">Confira o que fazemos</h2>
 
+      <article class="box">
+        <i class="fas fa-drafting-compass"></i>
+        <h1>Web Design</h1>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      </article>
+
+      <article class="box">
+        <i class="fas fa-atlas"></i>
+        <h1>Design Gráfico</h1>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      </article>
+
+      <article class="box">
+        <i class="fas fa-gamepad"></i>
+        <h1>Game Dev</h1>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      </article>
+
+    </article>
+  </section>
+
+  <section>
+    <article class="container space">
+      <h1 class="titulo">Conteudo 2</h1>
+      <h2 class="subtitulo">Lorem ipsum dolor</h2>
+
+      <figure id="image"></figure>
+      <article class="text-left">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+
+        <a href="#">
+          <div class="button">
+            ACESSAR PORTFOLIO
+          </div>
+        </a><br><br>
+
+      </article>
+    </article>
+  </section>
+
+
+
+  <section id="contato">
     <article class="container space">
       <h1 class="titulo">Contatos</h1>
       <h2 class="subtitulo">Dúvidas? Fale conosco no formulário abaixo ou email: contato@contato.com</h2>
@@ -98,13 +107,12 @@
         <input type="text" class="campo" name="email" placeholder="nome@email.com"><br>
         <input type="text" class="campo" name="telefone" placeholder="(11)9 1234-1234"><br>
         <textarea name="mensagem" class="campo" placeholder="Digite sua mensagem"></textarea><br>
-        <input type="submit" name="enviar" value="Enviar!" >
+        <input id="enviar" type="submit" name="enviar" value="Enviar !">
       </form>
 
+    </section>
 
-  </section>
 
-
-<footer>Site © 2020</footer>
-</body>
-</html>
+    <footer>Site © 2020</footer>
+  </body>
+  </html>
