--- a/index.html
+++ b/index.html
@@ -95,13 +95,12 @@
   </section>
 
 
-
   <section id="contato">
     <article class="container space">
-      <h1 class="titulo">Contatos</h1>
+      <h1 class="titulo">Contato</h1>
       <h2 class="subtitulo">Dúvidas? Fale conosco no formulário abaixo ou email: contato@contato.com</h2>
-
-      <h1>Formulario de Contato</h1>
+      <br>
+      <!-- <h1>Formulario de Contato</h1><br> -->
       <form class="" action="" method="post">
         <input type="text" class="campo" name="nome" placeholder="Digite seu nome"><br>
         <input type="text" class="campo" name="email" placeholder="nome@email.com"><br>
