--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <input type="text" class="campo" name="email" placeholder="nome@email.com"><br>
         <input type="text" class="campo" name="telefone" placeholder="(11)9 1234-1234"><br>
         <textarea name="mensagem" class="campo" placeholder="Digite sua mensagem"></textarea><br>
-        <input id="enviar" type="submit" name="enviar" value="Enviar !">
+        <input id="enviar" type="submit" name="enviar" value="Enviar">
       </form>
 
     </section>
