--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <section id="logo"></section>
       <nav class="menu">
         <div id="mobile">
-          MENU
+          <!-- MENU -->
+          <i class="fas fa-bars"></i>
         </div>
         <script type="text/javascript">
         $('#mobile').on('click', function(){
